# spy-sc2

./: Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: analyze_replays.ipynb  create_dataset.ipynb  scout_train.ipynb  scout_train_torch.ipynb
resources/maps/: Tier1MicroAIArena_v4.SC2Map  Tier1MicroAIArena_v6.SC2Map  Tier2MicroAIArena_v4.SC2Map  Tier2MicroAIArena_v6.SC2Map
resources/replays/: 3901860_Sharkling_PhantomBot_EphemeronAIE.SC2Replay  3905146_Eris_SharpenedEdge_AutomatonAIE.SC2Replay  3905917_Eris_SharpenedEdge_InterloperAIE.SC2Replay
scripts/: analyze_replay.py  analyze_replays.sh
src/spy_sc2/: observation_writer.py  replay.py  utils.py
